[gd_scene load_steps=2 format=3 uid="uid://minimap_scene"]

[ext_resource type="Script" path="res://ui/minimap.gd" id="1_minimap"]

[node name="Minimap" type="Control"]
anchors_preset = 0
offset_right = 220.0
offset_bottom = 250.0
script = ExtResource("1_minimap")

[node name="MapPanel" type="Panel" parent="."]
offset_left = 10.0
offset_top = 30.0
offset_right = 210.0
offset_bottom = 230.0

[node name="MapBackground" type="ColorRect" parent="MapPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.2, 0.12, 0.9)

[node name="VillageMarker" type="ColorRect" parent="MapPanel"]
offset_left = 95.0
offset_top = 95.0
offset_right = 105.0
offset_bottom = 105.0
color = Color(0.7, 0.5, 0.3, 1)

[node name="VillageLabel" type="Label" parent="MapPanel/VillageMarker"]
offset_left = -30.0
offset_top = 8.0
offset_right = 40.0
offset_bottom = 21.0
text = "Village"
horizontal_alignment = 1

[node name="CommonGroundMarker" type="ColorRect" parent="MapPanel"]
offset_left = 95.0
offset_top = 25.0
offset_right = 105.0
offset_bottom = 35.0
color = Color(0.3, 0.25, 0.25, 1)

[node name="TowerMarker" type="ColorRect" parent="MapPanel"]
offset_left = 35.0
offset_top = 145.0
offset_right = 45.0
offset_bottom = 155.0
color = Color(0.5, 0.5, 0.55, 1)

[node name="RealmMarker" type="ColorRect" parent="MapPanel"]
offset_left = 155.0
offset_top = 125.0
offset_right = 165.0
offset_bottom = 135.0
color = Color(0.6, 0.5, 0.35, 1)

[node name="HillsMarker" type="ColorRect" parent="MapPanel"]
offset_left = 75.0
offset_top = 55.0
offset_right = 85.0
offset_bottom = 65.0
color = Color(0.4, 0.55, 0.3, 1)

[node name="RoadNorth" type="ColorRect" parent="MapPanel"]
offset_left = 98.0
offset_top = 30.0
offset_right = 102.0
offset_bottom = 100.0
color = Color(0.5, 0.4, 0.3, 0.8)

[node name="RoadEast" type="ColorRect" parent="MapPanel"]
offset_left = 100.0
offset_top = 98.0
offset_right = 160.0
offset_bottom = 102.0
color = Color(0.5, 0.4, 0.3, 0.8)

[node name="PlayerMarker" type="ColorRect" parent="MapPanel"]
offset_left = 95.0
offset_top = 95.0
offset_right = 105.0
offset_bottom = 105.0
color = Color(0.2, 0.6, 1, 1)

[node name="PlayerDot" type="ColorRect" parent="MapPanel/PlayerMarker"]
offset_left = 2.0
offset_top = 2.0
offset_right = 8.0
offset_bottom = 8.0
color = Color(1, 1, 1, 1)

[node name="TitleLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 5.0
offset_right = 210.0
offset_bottom = 28.0
text = "The Lands of Balance"
horizontal_alignment = 1

[node name="LocationLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 232.0
offset_right = 210.0
offset_bottom = 250.0
text = "Village of Eights"
horizontal_alignment = 1
